crates/pg_syntax/tests/snapshots/postgres_regress/spgist@20.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index spgist_point_idx2 on spgist_point_tbl using spgist(p) with (fillfactor = 101);
---
IndexStmt@0..91
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..30 "spgist_point_idx2"
  Whitespace@30..31 " "
  On@31..33 "on"
  Whitespace@33..34 " "
  RangeVar@34..50
    Ident@34..50 "spgist_point_tbl"
  Whitespace@50..51 " "
  Using@51..56 "using"
  Whitespace@56..57 " "
  Ident@57..63 "spgist"
  Ascii40@63..64 "("
  IndexElem@64..65
    Ident@64..65 "p"
  Ascii41@65..66 ")"
  Whitespace@66..67 " "
  With@67..71 "with"
  Whitespace@71..72 " "
  Ascii40@72..73 "("
  DefElem@73..89
    Ident@73..83 "fillfactor"
    Whitespace@83..84 " "
    Ascii61@84..85 "="
    Whitespace@85..86 " "
    Iconst@86..89 "101"
  Ascii41@89..90 ")"
  Ascii59@90..91 ";"

