crates/pg_syntax/tests/snapshots/postgres_regress/spgist@24.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table spgist_domain_tbl (f1 spgist_text);
---
CreateStmt@0..48
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "spgist_domain_tbl"
  Whitespace@30..31 " "
  Ascii40@31..32 "("
  ColumnDef@32..46
    Ident@32..34 "f1"
    Whitespace@34..35 " "
    TypeName@35..46
      Ident@35..46 "spgist_text"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

