crates/pg_syntax/tests/snapshots/postgres_regress/spgist@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select * from spgist_domain_tbl where f1 = 'fo';"
---
SelectStmt@0..48
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "from"
  Whitespace@13..14 " "
  RangeVar@14..31
    Ident@14..31 "spgist_domain_tbl"
  Whitespace@31..32 " "
  Where@32..37 "where"
  Whitespace@37..38 " "
  AExpr@38..47
    ColumnRef@38..40
      Ident@38..40 "f1"
    Whitespace@40..41 " "
    Ascii61@41..42 "="
    Whitespace@42..43 " "
    AConst@43..47
      Sconst@43..47 "'fo'"
  Ascii59@47..48 ";"

