crates/pg_syntax/tests/snapshots/postgres_regress/spgist@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index spgist_unlogged_idx on spgist_unlogged_tbl using spgist (b);
---
IndexStmt@0..73
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  Ident@13..32 "spgist_unlogged_idx"
  Whitespace@32..33 " "
  On@33..35 "on"
  Whitespace@35..36 " "
  RangeVar@36..55
    Ident@36..55 "spgist_unlogged_tbl"
  Whitespace@55..56 " "
  Using@56..61 "using"
  Whitespace@61..62 " "
  Ident@62..68 "spgist"
  Whitespace@68..69 " "
  Ascii40@69..70 "("
  IndexElem@70..71
    Ident@70..71 "b"
  Ascii41@71..72 ")"
  Ascii59@72..73 ";"

