crates/pg_syntax/tests/snapshots/postgres_regress/spgist@31.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into spgist_unlogged_tbl(b)\nselect box(point(i,j))\n  from generate_series(1,100,5) i,\n       generate_series(1,10,5) j;"
---
InsertStmt@0..126
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..31
    Ident@12..31 "spgist_unlogged_tbl"
  Ascii40@31..32 "("
  ResTarget@32..33
    Ident@32..33 "b"
  Ascii41@33..34 ")"
  Newline@34..35 "\n"
  SelectStmt@35..125
    Select@35..41 "select"
    Whitespace@41..42 " "
    ResTarget@42..55
      FuncCall@42..55
        Ident@42..45 "box"
        Ascii40@45..46 "("
        FuncCall@46..55
          Ident@46..51 "point"
          Ascii40@51..52 "("
          ColumnRef@52..53
            Ident@52..53 "i"
          Ascii44@53..54 ","
          ColumnRef@54..55
            Ident@54..55 "j"
    Ascii41@55..56 ")"
    Ascii41@56..57 ")"
    Newline@57..58 "\n"
    Whitespace@58..60 "  "
    From@60..64 "from"
    Whitespace@64..65 " "
    RangeFunction@65..91
      List@65..88
        FuncCall@65..88
          Ident@65..80 "generate_series"
          Ascii40@80..81 "("
          AConst@81..82
            Iconst@81..82 "1"
          Ascii44@82..83 ","
          AConst@83..86
            Iconst@83..86 "100"
          Ascii44@86..87 ","
          AConst@87..88
            Iconst@87..88 "5"
      Ascii41@88..89 ")"
      Whitespace@89..90 " "
      Alias@90..91
        Ident@90..91 "i"
    Ascii44@91..92 ","
    Newline@92..93 "\n"
    Whitespace@93..100 "       "
    RangeFunction@100..125
      List@100..122
        FuncCall@100..122
          Ident@100..115 "generate_series"
          Ascii40@115..116 "("
          AConst@116..117
            Iconst@116..117 "1"
          Ascii44@117..118 ","
          AConst@118..120
            Iconst@118..120 "10"
          Ascii44@120..121 ","
          AConst@121..122
            Iconst@121..122 "5"
      Ascii41@122..123 ")"
      Whitespace@123..124 " "
      Alias@124..125
        Ident@124..125 "j"
  Ascii59@125..126 ";"

