crates/pg_syntax/tests/snapshots/postgres_regress/spgist@4.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: delete from spgist_point_tbl where id < 5;
---
DeleteStmt@0..42
  DeleteP@0..6 "delete"
  Whitespace@6..7 " "
  From@7..11 "from"
  Whitespace@11..12 " "
  RangeVar@12..28
    Ident@12..28 "spgist_point_tbl"
  Whitespace@28..29 " "
  Where@29..34 "where"
  Whitespace@34..35 " "
  AExpr@35..41
    ColumnRef@35..37
      Ident@35..37 "id"
    Whitespace@37..38 " "
    Ascii60@38..39 "<"
    Whitespace@39..40 " "
    AConst@40..41
      Iconst@40..41 "5"
  Ascii59@41..42 ";"

