crates/pg_syntax/tests/snapshots/postgres_regress/spgist@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into spgist_point_tbl (id, p)\nselect g+100000, point(g*10+1, g*10+1) from generate_series(1, 10000) g;"
---
InsertStmt@0..109
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..28
    Ident@12..28 "spgist_point_tbl"
  Whitespace@28..29 " "
  Ascii40@29..30 "("
  ResTarget@30..32
    Ident@30..32 "id"
  Ascii44@32..33 ","
  Whitespace@33..34 " "
  ResTarget@34..35
    Ident@34..35 "p"
  Ascii41@35..36 ")"
  Newline@36..37 "\n"
  SelectStmt@37..108
    Select@37..43 "select"
    Whitespace@43..44 " "
    ResTarget@44..52
      AExpr@44..52
        ColumnRef@44..45
          Ident@44..45 "g"
        Ascii43@45..46 "+"
        AConst@46..52
          Iconst@46..52 "100000"
    Ascii44@52..53 ","
    Whitespace@53..54 " "
    ResTarget@54..74
      FuncCall@54..74
        Ident@54..59 "point"
        Ascii40@59..60 "("
        AExpr@60..66
          AExpr@60..64
            ColumnRef@60..61
              Ident@60..61 "g"
            Ascii42@61..62 "*"
            AConst@62..64
              Iconst@62..64 "10"
          Ascii43@64..65 "+"
          AConst@65..66
            Iconst@65..66 "1"
        Ascii44@66..67 ","
        Whitespace@67..68 " "
        AExpr@68..74
          AExpr@68..72
            ColumnRef@68..69
              Ident@68..69 "g"
            Ascii42@69..70 "*"
            AConst@70..72
              Iconst@70..72 "10"
          Ascii43@72..73 "+"
          AConst@73..74
            Iconst@73..74 "1"
    Ascii41@74..75 ")"
    Whitespace@75..76 " "
    From@76..80 "from"
    Whitespace@80..81 " "
    RangeFunction@81..108
      List@81..105
        FuncCall@81..105
          Ident@81..96 "generate_series"
          Ascii40@96..97 "("
          AConst@97..98
            Iconst@97..98 "1"
          Ascii44@98..99 ","
          Whitespace@99..100 " "
          AConst@100..105
            Iconst@100..105 "10000"
      Ascii41@105..106 ")"
      Whitespace@106..107 " "
      Alias@107..108
        Ident@107..108 "g"
  Ascii59@108..109 ";"

