crates/pg_syntax/tests/snapshots/postgres_regress/subselect@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT (SELECT ARRAY[1,2,3])[1];"
---
SelectStmt@0..32
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..30
    AIndirection@7..30
      SubLink@7..26
        SelectStmt@7..26
          Ascii40@7..8 "("
          Select@8..14 "SELECT"
          Whitespace@14..15 " "
          ResTarget@15..26
            AArrayExpr@15..26
              Array@15..20 "ARRAY"
              Ascii91@20..21 "["
              AConst@21..22
                Iconst@21..22 "1"
              Ascii44@22..23 ","
              AConst@23..24
                Iconst@23..24 "2"
              Ascii44@24..25 ","
              AConst@25..26
                Iconst@25..26 "3"
      Ascii93@26..27 "]"
      Ascii41@27..28 ")"
      Ascii91@28..29 "["
      AIndices@29..30
        AConst@29..30
          Iconst@29..30 "1"
  Ascii93@30..31 "]"
  Ascii59@31..32 ";"

